# flex_desal

./: README.md  RO_IS_aff_laws_surr_2.csv  RO_IS_pump_aff_law_data_for_surrogate_1.csv  RO_feed_aff_laws_surr_2.csv  UF_aff_laws_surr_2.csv  conftest.py  dummy_result.csv  flex_desal_analysis_setup.yml  pyproject.toml  requirements.txt  solution.pickle  temp_pump_surr_data.csv  temp_pump_surr_data_1.csv
.github/workflows/: checks.yml
docs/: detailed_pump_model.rst  head_loss.rst  source.rst
src/costing/: chemical_addition.py  source.py
src/models/: __init__.py  chemical_addition.py  head_loss.py  pump_detailed.py  source.py  translator_NaCl_to_ZO.py
src/models/tests/: test_chemical_addition.py  test_pump_curves_data.csv  test_pump_curves_data_uf.csv  test_pump_detailed.ipynb  test_pump_detailed.py  test_source.py
src/pricetaker/flowsheets/: params.py  unit_models.py  utils.py  wrd_ro_flowsheet.py  wrd_unit_models.py
src/pricetaker/tutorials/: mp_model.ipynb  notebook_as_script.py  ro_const_SEC.py  sbce_pricesignal_day.csv  sbce_pricesignal_short.csv  wrd_pricesignal_august.csv  wrd_pricesignal_summer.csv  wrd_pricesignal_summer.xlsx
src/srp/: __init__.py  srp_treatment_train.py
src/srp/_old/: srp_treatment_train.py
src/srp/components/: __init__.py  brine_concentrator.py  generic_mixer.py  generic_product.py  generic_separator.py  pump.py  raw_water_tank.py  ro.py  translator_sw_to_water.py
src/srp/tests/: test_brine_concentrator.py  test_generic_mixer.py  test_generic_separator.py  (+3 more)
src/wrd/: Sept_2025_report.ipynb  utilities.py  wrd_treatment_train.py
(+119 files in other folders)
