[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flex_desal_analysis"
readme = "README.md"
version = "0.1.0"
description = "Python package for conducting analysis for NAWI 3.25"
requires-python = ">=3.9"
dependencies = [
    "watertap-reflo>=0.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]